--- a/AllWindowsForms/AllWindowsForms.csproj
+++ b/AllWindowsForms/AllWindowsForms.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="someForm2Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="someForm2Test.Designer.cs">
+      <DependentUpon>someForm2Test.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ProdMngForm.resx">
       <DependentUpon>ProdMngForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +72,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="someForm2Test.resx">
+      <DependentUpon>someForm2Test.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
