--- a/AllWindowsForms/AllWindowsForms.csproj
+++ b/AllWindowsForms/AllWindowsForms.csproj
@@ -88,5 +88,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project 2\ClassLibrary.csproj">
+      <Project>{cfe83c2d-1000-4391-a30c-9209c8a9e34e}</Project>
+      <Name>ClassLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
