--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassDB.cs" />
-    <Compile Include="GenericReadWrite.cs" />
+    <Compile Include="GenericDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelExpertDB.cs" />
   </ItemGroup>
