--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GenericDB.cs" />
+    <Compile Include="ProductsFormDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelExpertDB.cs" />
   </ItemGroup>
