--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -47,7 +47,7 @@
     <Compile Include="TravelExpertDB.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Project 2\ClassLibrary.csproj">
+    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj">
       <Project>{cfe83c2d-1000-4391-a30c-9209c8a9e34e}</Project>
       <Name>ClassLibrary</Name>
     </ProjectReference>
