--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Suppliers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
