--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GenericDB.cs" />
     <Compile Include="ProductsFormDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuppliersDB.cs" />
     <Compile Include="TravelExpertDB.cs" />
   </ItemGroup>
   <ItemGroup>
