--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SupplierContactsDB.cs" />
     <Compile Include="GenericDB.cs" />
     <Compile Include="ProductsFormDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
