--- a/AllWindowsForms/AllWindowsForms.csproj
+++ b/AllWindowsForms/AllWindowsForms.csproj
@@ -60,6 +60,12 @@
     <Compile Include="someForm2Test.Designer.cs">
       <DependentUpon>someForm2Test.cs</DependentUpon>
     </Compile>
+    <Compile Include="SuppliersMngForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SuppliersMngForm.Designer.cs">
+      <DependentUpon>SuppliersMngForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="validator.cs" />
     <EmbeddedResource Include="ProdMngForm.resx">
       <DependentUpon>ProdMngForm.cs</DependentUpon>
@@ -76,6 +82,12 @@
     <EmbeddedResource Include="someForm2Test.resx">
       <DependentUpon>someForm2Test.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SuppliersMngForm.resx">
+      <DependentUpon>SuppliersMngForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="Properties\DataSources\Project_2.Affiliations.datasource" />
+    <None Include="Properties\DataSources\Project_2.SupplierContacts.datasource" />
+    <None Include="Properties\DataSources\Project_2.Suppliers.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
