--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AffiliationsDB.cs" />
+    <Compile Include="PackagesDB.cs" />
     <Compile Include="SupplierContactsDB.cs" />
     <Compile Include="GenericDB.cs" />
     <Compile Include="ProductsFormDB.cs" />
