--- a/ClassDB/ClassDB.csproj
+++ b/ClassDB/ClassDB.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AffiliationsDB.cs" />
+    <Compile Include="PackagesProductsSuppliersDB.cs" />
+    <Compile Include="ProductsSuppliersDB.cs" />
     <Compile Include="SupConAffDB.cs" />
     <Compile Include="SupplierContactsDB.cs" />
     <Compile Include="GenericDB.cs" />
