--- a/AllWindowsForms/AllWindowsForms.csproj
+++ b/AllWindowsForms/AllWindowsForms.csproj
@@ -97,6 +97,7 @@
     <None Include="Properties\DataSources\ClassLibrary.ProductsSuppliers.datasource">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\DataSources\ClassLibrary.Suppliers.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
