--- a/PackageEntry/PackageEntry.csproj
+++ b/PackageEntry/PackageEntry.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3B877FD4-9FF0-4FAA-98DE-23A7BE2D1D89}</ProjectGuid>
+    <ProjectGuid>{B441BB1E-D2CE-44BF-9837-147CB96C362F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>AllWindowsForms</RootNamespace>
-    <AssemblyName>AllWindowsForms</AssemblyName>
+    <RootNamespace>PackageEntry</RootNamespace>
+    <AssemblyName>PackageEntry</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,54 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PackageEntry.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PackageEntry.Designer.cs">
-      <DependentUpon>PackageEntry.cs</DependentUpon>
-    </Compile>
-    <Compile Include="M_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="M_Form.Designer.cs">
-      <DependentUpon>M_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ProdMngForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ProdMngForm.Designer.cs">
-      <DependentUpon>ProdMngForm.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="StartingForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="StartingForm.Designer.cs">
-      <DependentUpon>StartingForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SuppliersMngForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SuppliersMngForm.Designer.cs">
-      <DependentUpon>SuppliersMngForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="validator.cs" />
-    <EmbeddedResource Include="M_Form.resx">
-      <DependentUpon>M_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackageEntry.resx">
-      <DependentUpon>PackageEntry.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ProdMngForm.resx">
-      <DependentUpon>ProdMngForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -103,19 +63,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="StartingForm.resx">
-      <DependentUpon>StartingForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SuppliersMngForm.resx">
-      <DependentUpon>SuppliersMngForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="Properties\DataSources\ClassLibrary.ProductsSuppliers.datasource">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Properties\DataSources\ClassLibrary.Suppliers.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -128,19 +75,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ClassDB\ClassDB.csproj">
-      <Project>{4d1651ba-1c88-4359-b800-e0485e9f5d86}</Project>
-      <Name>ClassDB</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj">
-      <Project>{cfe83c2d-1000-4391-a30c-9209c8a9e34e}</Project>
-      <Name>ClassLibrary</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
