--- a/AllWindowsForms/AllWindowsForms.csproj
+++ b/AllWindowsForms/AllWindowsForms.csproj
@@ -135,6 +135,7 @@
     <None Include="Properties\DataSources\ClassLibrary.ProductsSuppliers.datasource">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\DataSources\ClassLibrary.SupConAff.datasource" />
     <None Include="Properties\DataSources\ClassLibrary.Suppliers.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
